[package]
name = "jtl-rs"
version = "0.1.0"
edition = "2021"
description = "A Rust library for parsing and stringifying JTL documents."
license = "MIT"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/OrtheSnowJames/jtl-rs"


[dependencies]
regex = "1.11.1"
serde_json = "1.0.139"

